# admin-ui/src/gen/types/EventModel.ts
@@ -10,6 +10,7 @@ export type EventModelTypeEnum =
   | 'PAGE_ACCESSED'
   | 'VERSION_ACCEPTED'
   | 'OBJECTION_RAISED'
+  | 'OBJECTION_REOPENED'
   | 'VERSION_PUBLISHED'
   | 'VERSION_ACTIVATED'
   | 'VERSION_RETIRED'
